--- a/abi.html
+++ b/abi.html
@@ -1,42 +1,41 @@
 <body>
     <table>
         <tr>
-            <td> <img src="_d5s5032.jpg" width="500"></td>
-            <td>
-                RANK	POINTS	DATE	COMPETITION	DISCIPLINE	CATEGORY	LOCATION
-                1.	225	18 December 2021	World Championship	Standard	Adult	Dubai - United Arab Emirates
-                1.		05 December 2021	Sport Series Games Qualifier	Standard	Adult	La Nucía - Spain
-                1.	624	08 December 2019	World Open	Standard	Adult	Moscow - Russia
-                1.	120	25 October 2019	Open	Standard	Adult	Moscow - Russia
-                1.	235	19 October 2019	World Championship	Standard	Adult	Leipzig - Germany
-                1.		13 October 2019	European Championship	Standard	Adult	Chisinau - Moldova
-                1.	245	15 August 2019	Super Grand Prix	Standard	Adult	Stuttgart - Germany
-                1.		09 December 2018	GrandSlam	Standard	Adult	Shanghai - People's Republic of China
-                1.		17 November 2018	World Championship	Standard	Adult	Vienna - Austria
+            <td class="zh"> <img src="_d5s5032.jpg">
+                Dmitry Zharkov - Olga Kulikova</td>
+            <td class="li">
+                <h5>RANK	POINTS	DATE	COMPETITION	DISCIPLINE	CATEGORY	LOCATION</h5>
+                <ul>
+                    <li>05 December 2021	Sport Series Games Qualifier	Standard	Adult	La Nucía - Spain</li>		
+                    <li>08 December 2019	World Open	Standard	Adult	Moscow - Russia</li>
+                    <li>25 October 2019	Open	Standard	Adult	Moscow - Russia</li>
+                    <li>19 October 2019	World Championship	Standard	Adult	Leipzig - Germany</li>
+                    <li>13 October 2019	European Championship	Standard	Adult	Chisinau - Moldova</li>
+                    <li>15 August 2019	Super Grand Prix	Standard	Adult	Stuttgart - Germany</li>
+                    <li>09 December 2018	GrandSlam	Standard	Adult	Shanghai - People's Republic of China</li>
+                    <li>17 November 2018	World Championship	Standard	Adult	Vienna - Austria</li>
+                </ul>
             </td>
         </tr>
-  </table>
-    <table>
-        <tr>
-            <td> Dmitry Zharkov - Olga Kulikova</td>
-        </tr>
-    </table>
-
-   
-    
+  </table> 
 </body>
 <style>
     table {
         width: 100%;
     }
-    td {
-        width: 50%;
+    td.zh {
+        width: 300px;
+        text-align: center;
         vertical-align: top;
         white-space: pre-line;
-        
+    }
+    td.li {
+        padding: 30px;
+        vertical-align: top;
     }
     img {
         box-shadow: 1px 1px 6px black;
         border-radius: 8px;
+        margin: 5px;
     }
 </style>
