--- a/index.html
+++ b/index.html
@@ -65,28 +65,28 @@
 </body>
 <style>
     table {
-        border-spacing: 6px;
+        border-spacing: 10px;
         margin: 10px auto;
     }
     td, th {
-        box-shadow: 1px 1px 3px rgb(38, 151, 98);
+        box-shadow: 1px 1px 3px rgb(2, 3, 3);
         border-radius: 6px;
         width: 120px;
-        height: 60px;
+        height: 40px;
         color: rgb(177, 83, 29);
-        text-shadow: 1px 1px 1px rgb(31, 17, 26); 
-        border: solid 2px rgb(131, 22, 85);
+        text-shadow: 1px 1px 1px rgb(0, 0, 0); 
+        border: solid 1px rgb(131, 22, 85);
         text-align: center;
         font-style: oblique;
         background-color: wheat;
     }
     th {
-        background-color: darkolivegreen;
+        background-color: rgb(83, 83, 58);
         color: white;
-        height: 50px;
+        height: 37px;
     }
     .t {
-        background-color: darkseagreen;
+        background-color: rgb(149, 150, 137);
     }
     body {
         text-align: center;
@@ -94,8 +94,8 @@
     }
     .ssz {
         color:rgb(72, 21, 114);
-        background-color: rgb(88, 202, 185);
-        box-shadow: inset 1px 1px 6px black;
+        background-color: rgb(195, 196, 187);
+        box-shadow: 1px 1px 6px black;
         width: 70px;
     }
 </style>
