--- a/bry/bry.html
+++ b/bry/bry.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <head>
     <meta charset="utf-8">
-    <script src="https://cdn.jsdelivr.net/npm/brython@3.10.3/brython.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/brython@3.10.3/brython_stdlib.js"></script>
+    <script src="src/brython.min.js"></script>
+    <script src="src/brython_stdlib.js"></script>
     <script type="text/python" src="bry.py"></script>
     <link rel="stylesheet" href="bry.css"></link>
 </head>
