--- a/o1/calc.html
+++ b/o1/calc.html
@@ -16,7 +16,7 @@
             <td onclick="document.getElementById('e').innerHTML='0'">c</td>
             <td onclick="f('(')">(</td>
             <td onclick="f(')')">)</td>
-            <td>/</td>
+            <td onclick="f('/')">/</td>
         </tr>
         <tr>
             <td onclick="f(7)">7</td>
