--- a/o1/calc.html
+++ b/o1/calc.html
@@ -79,6 +79,10 @@
         padding-right:20px;
         padding-left:20px;
     }
+    body {
+        background-color: beige;
+        color:rgb(5, 45, 76);
+    }
 </style>
 <script>
     gyök = Math.sqrt
