--- a/o1/calc.html
+++ b/o1/calc.html
@@ -46,15 +46,16 @@
 
 </body>
 <style>
+    @import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
     td {
-        color: rgb(43, 67, 226);
+        color: rgb(35, 46, 123);
         background-color: aqua;
         height: 60px;
         width: 80px;
         text-align: center;
         cursor: pointer;
-        font-size: 30px;
-        text-shadow: 1px 1px 4px gray;
+        font-size: 50px;
+        text-shadow: 1px 1px 4px rgb(82, 62, 62);
         box-shadow: 1px 1px 3px black;
         border-radius: 5px;
         user-select: none;
@@ -66,18 +67,21 @@
         background-color: bisque;
     }
     table {
+        font-family: 'VT323', monospace;
         margin: auto;
         border-spacing: 9px;
     }
     h1 {
         text-align: center;
         text-shadow: 1px 1px 4px gray;
+        font-size: 50px;
     }
     #e {
         background-color: rgb(230, 165, 86);
         text-align: right;
         padding-right:20px;
         padding-left:20px;
+        box-shadow: 1px 1px 4px inset black;
     }
     body {
         background-color: beige;
