--- a/o1/calc.html
+++ b/o1/calc.html
@@ -50,7 +50,6 @@
     td {
         color: rgb(35, 46, 123);
         background-color: aqua;
-        height: 60px;
         width: 80px;
         text-align: center;
         cursor: pointer;
@@ -77,11 +76,13 @@
         font-size: 50px;
     }
     #e {
-        background-color: rgb(230, 165, 86);
+        background-color: rgb(236, 238, 177);
         text-align: right;
         padding-right:20px;
         padding-left:20px;
         box-shadow: 1px 1px 4px inset black;
+        height: 60px;
+        color: rgb(138, 19, 19)
     }
     body {
         background-color: beige;
