--- a/Apa_megoldása/index.html
+++ b/Apa_megoldása/index.html
@@ -10,7 +10,7 @@
     <table class="main">
         <td class="left">
             <h1 id="ft">A Földközi-tenger</h1>
-            <p class="ft1">A Földközi-tenger az <a href='https://hu.wikipedia.org/wiki/Atlanti-óceán'>Atlanti-óceánhoz</a> a Gibraltári-szorossal kapcsolódó melléktenger, amelyet három kontinens vesz körbe:</p>
+            <p class="ft1">A <b>Földközi-tenger</b> az <a href='https://hu.wikipedia.org/wiki/Atlanti-óceán' target="_blank">Atlanti-óceánhoz</a> a Gibraltári-szorossal kapcsolódó melléktenger, amelyet három kontinens vesz körbe:</p>
             <ol>
                 <li>Európa (északról)</li>
                 <li>Ázsia (keletről)</li>
@@ -18,7 +18,7 @@
             </ol>
             <p class="ft1">A Földközi-tenger térsége vagy Mediterráneum (mediterrán, azaz „földközi”) a partvidéki területekkel és a szigetekkel a nyugati civilizáció bölcsője. Az ókorban fontos közlekedési térségnek számított, az egyiptomiak, görögök, rómaiak és a közel-keleti népek is sokat utaztak és kereskedtek e tenger partjain.</p>
             <div class="png"><img id="img" src="foldkozitenger.png" alt="Földközi-tenger térképe" width="600px"></div>
-            <p class="wikilink">Forrás: <a href="https://hu.wikipedia.org/wiki/Földközi-tenger">Földközi-tenger – Wikipédia</a></p>
+            <p class="wikilink">Forrás: <a href="https://hu.wikipedia.org/wiki/Földközi-tenger"#388ec0>Földközi-tenger – Wikipédia</a></p>
         </td>
         <td class="right">
             <h2>Adatlap</h2>
